--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,15 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# 配置 npm 国内镜像源
+RUN npm config set registry https://registry.npmmirror.com
+
 COPY package*.json ./
 RUN npm install
 
 COPY . .
 
-CMD ["npm", "run", "dev"]
+# 生产环境构建
+RUN npm run build
+
+CMD ["npm", "run", "start"]
